@@ -14,13 +14,6 @@ class CacheabilityTest extends SearchApiBrowserTestBase {
   use ExampleContentTrait;
 
   /**
-   * The ID of the search server used for this test.
-   *
-   * @var string
-   */
-  protected $serverId;
-
-  /**
    * {@inheritdoc}
    */
   public static $modules = [
@@ -36,14 +29,11 @@ class CacheabilityTest extends SearchApiBrowserTestBase {
   public function setUp() {
     parent::setUp();
 
-    // Add a test server and index.
-    $this->getTestServer();
-    $this->getTestIndex();
-
     // Set up example structure and content and populate the test index with
     // that content.
     $this->setUpExampleStructure();
     $this->insertExampleContent();
+
     \Drupal::getContainer()
       ->get('search_api.index_task_manager')
       ->addItemsAll(Index::load($this->indexId));
@@ -61,6 +51,10 @@ class CacheabilityTest extends SearchApiBrowserTestBase {
     $this->assertSession()->statusCodeEquals(200);
     $this->assertSession()->responseHeaderEquals('x-drupal-dynamic-cache', 'UNCACHEABLE');
     $this->assertTrue(strpos($this->drupalGetHeader('cache-control'), 'no-cache'));
+
+    // Verify that the search results are displayed.
+    $this->assertSession()->pageTextContains('foo test');
+    $this->assertSession()->pageTextContains('foo baz');
   }
 
 }
