@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2659868 by borisson_, drunken monkey: Fixed CacheabilityTest to make sure it
+  displays the rendered entities.
 - #2853049 by Blanca.Esqueda: Fixed config schema error for Views date filters.
 - #2847810 by JayKandari: Added Stemmer to ProcessorIntegrationTest.
 - #2753667 by pfrenssen, drunken monkey, borisson_, idimopoulos, sandervd,
